# feldspar-synch

./: README.md  feldspar-synch.cabal
examples/: ALSA.hs  Capture.hs  Synth.hs
src/Feldspar/: Synch.hs
src/Feldspar/Synch/: Stream.hs  System.hs
src/Feldspar/Synch/Stream/: Internal.hs
tests/: Laws.hs  Misc.hs
