name:                feldspar-synch
version:             0.1
synopsis:            Yampa-style synchronous streams for RAW-Feldspar
-- description:
license:             BSD3
license-file:        LICENSE
author:              Emil Axelsson
maintainer:          emax@chalmers.se
-- copyright:
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs: src

  exposed-modules:
    Feldspar.Synch.System
    Feldspar.Synch

  -- other-modules:

  -- other-extensions:

  build-depends:
    base >=4.8 && <5,
    raw-feldspar,
    language-c-quote

  default-language: Haskell2010

  default-extensions:
    FlexibleContexts
    RecordWildCards
    TypeFamilies

test-suite Misc
  type: exitcode-stdio-1.0

  hs-source-dirs: tests

  main-is: Misc.hs

  default-language: Haskell2010

  build-depends:
    base,
    feldspar-synch

test-suite Synth
  type: exitcode-stdio-1.0

  hs-source-dirs: examples

  main-is: Synth.hs

  default-language: Haskell2010

  default-extensions:
    FlexibleContexts
    GADTs
    RecordWildCards
    ScopedTypeVariables

  build-depends:
    base,
    raw-feldspar,
    feldspar-synch

